log/build_2024-04-22_18-24-00/uav_urdf_demo/stdout_stderr.log
[35m[1mScanning dependencies of target state_publisher[0m
[ 50%] Built target command_publisher
[ 75%] [32mBuilding CXX object CMakeFiles/state_publisher.dir/src/state_publisher.cpp.o[0m
/home/ccl/ROS2_UAV/uav_urdf_demo/src/state_publisher.cpp: In constructor ‘StatePublisher::StatePublisher()’:
/home/ccl/ROS2_UAV/uav_urdf_demo/src/state_publisher.cpp:20:22: error: ‘create_subscriber’ was not declared in this scope; did you mean ‘create_subscription’?
   20 |         subscriber = create_subscriber<std_msgs::msg::Int16>(
      |                      ^~~~~~~~~~~~~~~~~
      |                      create_subscription
/home/ccl/ROS2_UAV/uav_urdf_demo/src/state_publisher.cpp:20:60: error: expected primary-expression before ‘>’ token
   20 |         subscriber = create_subscriber<std_msgs::msg::Int16>(
      |                                                            ^
/home/ccl/ROS2_UAV/uav_urdf_demo/src/state_publisher.cpp:21:13: warning: left operand of comma operator has no effect [-Wunused-value]
   21 |             "cmd_direction", 10,
      |             ^~~~~~~~~~~~~~~
In file included from /home/ccl/ROS2_UAV/uav_urdf_demo/src/state_publisher.cpp:1:
/usr/include/c++/9/functional: In instantiation of ‘struct std::_Bind_check_arity<void (StatePublisher::*)(std::shared_ptr<std_msgs::msg::Int16_<std::allocator<void> > >), StatePublisher*>’:
/usr/include/c++/9/functional:787:12:   required from ‘struct std::_Bind_helper<false, void (StatePublisher::*)(std::shared_ptr<std_msgs::msg::Int16_<std::allocator<void> > >), StatePublisher*>’
/usr/include/c++/9/functional:808:5:   required by substitution of ‘template<class _Func, class ... _BoundArgs> typename std::_Bind_helper<std::__is_socketlike<_Func>::value, _Func, _BoundArgs ...>::type std::bind(_Func&&, _BoundArgs&& ...) [with _Func = void (StatePublisher::*)(std::shared_ptr<std_msgs::msg::Int16_<std::allocator<void> > >); _BoundArgs = {StatePublisher*}]’
/home/ccl/ROS2_UAV/uav_urdf_demo/src/state_publisher.cpp:22:58:   required from here
/usr/include/c++/9/functional:775:7: error: static assertion failed: Wrong number of arguments for pointer-to-member
  774 |       static_assert(_Varargs::value
      |                               ~~~~~
  775 |       ? sizeof...(_BoundArgs) >= _Arity::value + 1
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  776 |       : sizeof...(_BoundArgs) == _Arity::value + 1,
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/ccl/ROS2_UAV/uav_urdf_demo/src/state_publisher.cpp:22:58: warning: right operand of comma operator has no effect [-Wunused-value]
   22 |             std::bind(&StatePublisher::cmd_callback, this)
      |                                                          ^
make[2]: *** [CMakeFiles/state_publisher.dir/build.make:63: CMakeFiles/state_publisher.dir/src/state_publisher.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/state_publisher.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
